# DewPointDetector

./: CMakeLists.txt  Config.cc  Config.hh  InsecureSMTPClient.hh  LICENSE.txt  WUndergroundInterface.cc  WUndergroundInterface.hh  WeatherDataInterface.cc  WeatherDataInterface.hh  config.xml  main.cpp
cmake/Modules/: FindJsoncpp.cmake  FindPoco.cmake
